--- a/action.yml
+++ b/action.yml
@@ -20,15 +20,15 @@ inputs:
   gh_comments_url: 
     description: 'PR comments URL'
     required: false
-    default: ${{ github.event.pull_request.comments_url }}
+    default: ''
   gh_token: 
     description: 'Github Token'
     required: false
     default: ''
   gh_pr_commit: 
-    description: 'Github pull request SHA'
+    description: ''
     required: false
-    default: ${{ github.event.pull_request.head.sha }}
+    default: ''
 runs:
   using: 'docker'
   image: 'Dockerfile'
